--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
     <body>
-        <h1>Welcome to Keep Konect </h1>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
     </body>
 </html>
