--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <video id="video" class="video" autoplay loop muted preload>
+			<source src="../source/video/home.mp4
+			" type="video/mp4" >
+		</video>
     </body>
 </html>
