--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Hello World</h1>
-        <video id="video" class="video" autoplay loop muted preload>
-			<source src="../source/video/home.mp4
-			" type="video/mp4" >
-		</video>
+        <main>
+            <h1>Kot</h1>
+            <h2>Kot</h2>
+            <video id="video" class="video" autoplay loop muted preload>
+                <source src="../source/video/home.mp4
+                " type="video/mp4" >
+            </video>            
+        </main>
+
     </body>
 </html>
