--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <main>
-            <h1>Kot</h1>
-            <h2>Kot</h2>
+        <main>            
             <video id="video" class="video" autoplay loop muted preload>
-                <source src="../source/video/home.mp4
+                <source src="source/video/home.mp4
                 " type="video/mp4" >
-            </video>            
+            </video> 
+            <h1>Kot</h1>
+            <h2>Kot</h2>           
         </main>
 
     </body>
