--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
                 <source src="source/video/home.mp4
                 " type="video/mp4" >
             </video> 
-            <h1>Kot</h1>
+            <header>
+                <img src="source/img/logo.png" style="max-height: 90%;"/>
+            </header>
+            
             <h2>Kot</h2>           
         </main>
 
