--- a/index.html
+++ b/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <main>            
-            <video id="video" class="video" autoplay loop muted preload>
-                <source src="source/video/home.mp4
-                " type="video/mp4" >
-            </video> 
-            <header>
-                <img src="source/img/logo.png" style="max-height: 90%;"/>
-            </header>
-            
-            <h2>Kot</h2>           
-        </main>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Konect-V</title>
+</head>
+<body>
+    <header>
+        <img id="avatar" src="https://avatars.githubusercontent.com/u/66421869?v=4" alt="Konect-V">
+        <h1>Hi there, I'm Konect-V! 👋</h1>
+    </header>
 
-    </body>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I'm a passionate developer with a strong background in programming languages like C, HTML, CSS, PHP, and Bash. I enjoy exploring new technologies and solving complex problems through coding.</p>
+        <ul>
+            <li>💼 Student</li>
+            <li>🌐 Tech Enthusiast</li>
+            <li>🖥️ Open-Source Enthusiast</li>
+            <li>🌱 Always Learning</li>
+        </ul>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li><b>Languages:</b> C, HTML, CSS, PHP, Bash</li>
+        </ul>
+    </section>
+
+    <section id="biggest-project">
+        <h2>My Biggest Project</h2>
+        <p>One of my most significant achievements is the creation of an operating system from scratch, known as "Kot." It's a project I'm immensely proud of, and it demonstrates my deep understanding of system-level programming.</p>
+        <a href="https://github.com/kot-org/Kot">Kot Operating System 🖥️</a>
+    </section>
+
+    <footer>
+        <p>Feel free to explore my projects and reach out if you have any questions or want to collaborate on an exciting project.</p>
+        <p>Thanks for visiting my GitHub profile! 👍</p>
+    </footer>
+</body>
 </html>
