--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/66421869?v=4">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konect-V</title>
 </head>
