--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         <h1>Hi there, I'm Konect-V! 👋</h1>
     </header>
 
+    <section id="github-link">
+        <h2>GitHub</h2>
+        <p>Explore my projects on GitHub and follow my work.</p>
+        <a href="https://github.com/konect-V" id="github">View my GitHub profile</a>
+    </section>    
+
     <section id="about">
         <h2>About Me</h2>
         <p>I'm a passionate developer with a strong background in programming languages like C, HTML, CSS, PHP, and Bash. I enjoy exploring new technologies and solving complex problems through coding.</p>
@@ -31,9 +37,18 @@
         </ul>
     </section>
 
+    <section id="projects">
+        <h2>My projects</h2>
+        <ul>
+            <li><a href="https://github.com/kot-org/Kot">🖥️ Kot : a new vision of OSes</a></li>
+            <li><a href="https://github.com/konect-V/pasm">🌱 Pasm : pseudo asm compiler, runner</a></li>
+            <li><a href="https://github.com/konect-V/kfs-bridge">💼 KFS : a new vision of file systems</a></li>
+        </ul>
+    </section>
+
     <section id="biggest-project">
-        <h2>My Biggest Project</h2>
-        <p>One of my most significant achievements is the creation of an operating system from scratch, known as "Kot." It's a project I'm immensely proud of, and it demonstrates my deep understanding of system-level programming.</p>
+        <h2>My Biggest Project : Kot</h2>
+        <p>One of my most significant achievements is the creation of an operating system from scratch, known as Kot. It's a project I'm immensely proud of, and it demonstrates my deep understanding of system-level programming.</p>
         <a href="https://github.com/kot-org/Kot">Kot Operating System 🖥️</a>
     </section>
 
